Fix social media icons size on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ footer #social .media {
 }
 
 footer #social .media img {
-	max-height: 12vh;
+	max-height: 8vh;
 }
 
 footer #social .media a:hover img {
